--- a/Test1/assets/style/variable.css
+++ b/Test1/assets/style/variable.css
@@ -226,6 +226,9 @@
 .mb-40 {
   margin-bottom: 40px;
 }
+.mb-45 {
+  margin-bottom: 45px;
+}
 .mb-50 {
   margin-bottom: 50px;
 }
